OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/Missing_Info__c.object-meta.xml
<CustomObject>
    <label>Missing Information</label>
    <nameField>
        <label>Missing Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missing Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>