OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Missing Informations</relationshipLabel>
    <relationshipName>Missing_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>