OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Date_Of_Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Hospital_Admission__c</fullName>
    <label>Date Of Hospital Admission</label>
    <length>1</length>
    <type>Text</type>
</CustomField>