OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>1</length>
    <type>Text</type>
</CustomField>