OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <length>1</length>
    <type>Text</type>
</CustomField>