OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Dosage_Strength__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Strength__c</fullName>
    <label>Dosage Strength</label>
    <length>1</length>
    <type>Text</type>
</CustomField>