OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Dr_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Dr_Signature_Date__c</fullName>
    <label>Dr Signature Date</label>
    <length>1</length>
    <type>Text</type>
</CustomField>