OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Frequency_Days_supply__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Days_supply__c</fullName>
    <label>Frequency/Days supply</label>
    <length>1</length>
    <type>Text</type>
</CustomField>