OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/HIPAA_Authorization__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Authorization__c</fullName>
    <label>HIPAA Authorization</label>
    <length>1</length>
    <type>Text</type>
</CustomField>