OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Household_Size__c</fullName>
    <label>Household Size</label>
    <length>1</length>
    <type>Text</type>
</CustomField>