OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Income_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Income_Documentation__c</fullName>
    <label>Income Documentation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>