OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Insurance_Denial_Letter__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Denial_Letter__c</fullName>
    <label>Insurance Denial Letter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>