OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Medicare_Part_D_Card__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Part_D_Card__c</fullName>
    <label>Medicare Part D Card</label>
    <length>1</length>
    <type>Text</type>
</CustomField>