OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>NPI_Number__c</fullName>
    <label>NPI Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>