OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Number_of_Vials__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vials__c</fullName>
    <label>Number of Vials</label>
    <length>1</length>
    <type>Text</type>
</CustomField>