OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Provider_Insurance_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Provider_Insurance_Attestation__c</fullName>
    <label>Provider Insurance Attestation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>