OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/Provider_Signature__c.field-meta.xml
<CustomField>
    <fullName>Provider_Signature__c</fullName>
    <label>Provider Signature</label>
    <length>1</length>
    <type>Text</type>
</CustomField>