OpafProjectVisualForcePages/force-app/main/default/objects/Missing_Info__c/fields/REMS_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>REMS_Enrollment__c</fullName>
    <label>REMS Enrollment</label>
    <length>1</length>
    <type>Text</type>
</CustomField>